@@ -241,7 +241,7 @@ string FsmCodeGen::TOKSTART()
 {
 	ostringstream ret;
 	if ( tokstartExpr == 0 )
-		ret << ACCESS() + "tokstart";
+		ret << ACCESS() + "ts";
 	else {
 		ret << "(";
 		INLINE_LIST( ret, tokstartExpr, 0, false );
@@ -254,7 +254,7 @@ string FsmCodeGen::TOKEND()
 {
 	ostringstream ret;
 	if ( tokendExpr == 0 )
-		ret << ACCESS() + "tokend";
+		ret << ACCESS() + "te";
 	else {
 		ret << "(";
 		INLINE_LIST( ret, tokendExpr, 0, false );
